// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should remove a item 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <SLAListCard>
        <nav
          className="management-bar management-bar-light navbar navbar-expand-md"
        >
          <div
            className="container-fluid container-fluid-max-xl"
          >
            <ul
              className="autofit-row navbar-nav"
            >
              <li
                className="autofit-col-expand autofit-float-end nav-item"
              >
                <TooltipProvider>
                  <span
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="workflow-tooltip"
                      data-tooltip-align="bottom"
                      title="new-sla"
                    >
                      <withRouter()
                        className="btn btn-primary nav-btn nav-btn-monospaced"
                        to="/sla/new/undefined"
                      >
                        <Component
                          className="btn btn-primary nav-btn nav-btn-monospaced"
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "match": Object {
                                  "params": Object {
                                    "page": 1,
                                    "search": undefined,
                                    "sort": undefined,
                                  },
                                },
                                "pathname": "/processes/1/10/title%3Aasc",
                                "search": "?backPath=%2F",
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          location={
                            Object {
                              "hash": "",
                              "match": Object {
                                "params": Object {
                                  "page": 1,
                                  "search": undefined,
                                  "sort": undefined,
                                },
                              },
                              "pathname": "/processes/1/10/title%3Aasc",
                              "search": "?backPath=%2F",
                            }
                          }
                          match={
                            Object {
                              "isExact": false,
                              "params": Object {},
                              "path": "/",
                              "url": "/",
                            }
                          }
                          to="/sla/new/undefined"
                        >
                          <ChildLinkWrapper
                            backPath="/"
                            className="btn btn-primary nav-btn nav-btn-monospaced"
                            currentPath="/processes/1/10/title%3Aasc?backPath=%2F"
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "match": Object {
                                      "params": Object {
                                        "page": 1,
                                        "search": undefined,
                                        "sort": undefined,
                                      },
                                    },
                                    "pathname": "/processes/1/10/title%3Aasc",
                                    "search": "?backPath=%2F",
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            to="/sla/new/undefined"
                          >
                            <Link
                              className="btn btn-primary nav-btn nav-btn-monospaced"
                              to={
                                Object {
                                  "pathname": "/sla/new/undefined",
                                  "search": "?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F",
                                }
                              }
                            >
                              <a
                                className="btn btn-primary nav-btn nav-btn-monospaced"
                                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                                onClick={[Function]}
                              >
                                <Icon
                                  iconName="plus"
                                >
                                  <svg
                                    className="lexicon-icon lexicon-icon-plus"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                                      }
                                    }
                                    data-testid="icon"
                                    focusable="false"
                                    role="presentation"
                                  />
                                </Icon>
                              </a>
                            </Link>
                          </ChildLinkWrapper>
                        </Component>
                      </withRouter()>
                    </span>
                  </span>
                </TooltipProvider>
              </li>
            </ul>
          </div>
        </nav>
        <div
          className="container-fluid-1280"
        >
          <ListView
            emptyMessageText="sla-allows-to-define-and-measure-process-performance"
            emptyTitleText="no-slas-yet"
            fetching={false}
            loading={true}
          >
            <div>
              <LoadingState>
                <div
                  className="border-1 pb-6 pt-6 sheet"
                  data-testid="loadingState"
                >
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </div>
              </LoadingState>
            </div>
          </ListView>
        </div>
      </SLAListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component 1`] = `
Array [
  <nav
    className="management-bar management-bar-light navbar navbar-expand-md"
  >
    <div
      className="container-fluid container-fluid-max-xl"
    >
      <ul
        className="autofit-row navbar-nav"
      >
        <li
          className="autofit-col-expand autofit-float-end nav-item"
        >
          <span
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="workflow-tooltip"
              data-tooltip-align="bottom"
              title="new-sla"
            >
              <a
                className="btn btn-primary nav-btn nav-btn-monospaced"
                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                onClick={[Function]}
              >
                <svg
                  className="lexicon-icon lexicon-icon-plus"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                    }
                  }
                  data-testid="icon"
                  focusable="false"
                  role="presentation"
                />
              </a>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid-1280"
  >
    <div>
      <div
        className="border-1 pb-6 pt-6 sheet"
        data-testid="loadingState"
      >
        <span
          aria-hidden="true"
          className="loading-animation"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Should render component after item was removed 1`] = `
Array [
  <nav
    className="management-bar management-bar-light navbar navbar-expand-md"
  >
    <div
      className="container-fluid container-fluid-max-xl"
    >
      <ul
        className="autofit-row navbar-nav"
      >
        <li
          className="autofit-col-expand autofit-float-end nav-item"
        >
          <span
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="workflow-tooltip"
              data-tooltip-align="bottom"
              title="new-sla"
            >
              <a
                className="btn btn-primary nav-btn nav-btn-monospaced"
                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                onClick={[Function]}
              >
                <svg
                  className="lexicon-icon lexicon-icon-plus"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                    }
                  }
                  data-testid="icon"
                  focusable="false"
                  role="presentation"
                />
              </a>
            </span>
          </span>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid-1280"
  >
    <div>
      <div
        className="border-1 pb-6 pt-6 sheet"
        data-testid="loadingState"
      >
        <span
          aria-hidden="true"
          className="loading-animation"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Should render toast with SLA saved message 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <SLAListCard>
        <nav
          className="management-bar management-bar-light navbar navbar-expand-md"
        >
          <div
            className="container-fluid container-fluid-max-xl"
          >
            <ul
              className="autofit-row navbar-nav"
            >
              <li
                className="autofit-col-expand autofit-float-end nav-item"
              >
                <TooltipProvider>
                  <span
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="workflow-tooltip"
                      data-tooltip-align="bottom"
                      title="new-sla"
                    >
                      <withRouter()
                        className="btn btn-primary nav-btn nav-btn-monospaced"
                        to="/sla/new/undefined"
                      >
                        <Component
                          className="btn btn-primary nav-btn nav-btn-monospaced"
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "match": Object {
                                  "params": Object {
                                    "page": 1,
                                    "search": undefined,
                                    "sort": undefined,
                                  },
                                },
                                "pathname": "/processes/1/10/title%3Aasc",
                                "search": "?backPath=%2F",
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          location={
                            Object {
                              "hash": "",
                              "match": Object {
                                "params": Object {
                                  "page": 1,
                                  "search": undefined,
                                  "sort": undefined,
                                },
                              },
                              "pathname": "/processes/1/10/title%3Aasc",
                              "search": "?backPath=%2F",
                            }
                          }
                          match={
                            Object {
                              "isExact": false,
                              "params": Object {},
                              "path": "/",
                              "url": "/",
                            }
                          }
                          to="/sla/new/undefined"
                        >
                          <ChildLinkWrapper
                            backPath="/"
                            className="btn btn-primary nav-btn nav-btn-monospaced"
                            currentPath="/processes/1/10/title%3Aasc?backPath=%2F"
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "match": Object {
                                      "params": Object {
                                        "page": 1,
                                        "search": undefined,
                                        "sort": undefined,
                                      },
                                    },
                                    "pathname": "/processes/1/10/title%3Aasc",
                                    "search": "?backPath=%2F",
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            to="/sla/new/undefined"
                          >
                            <Link
                              className="btn btn-primary nav-btn nav-btn-monospaced"
                              to={
                                Object {
                                  "pathname": "/sla/new/undefined",
                                  "search": "?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F",
                                }
                              }
                            >
                              <a
                                className="btn btn-primary nav-btn nav-btn-monospaced"
                                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                                onClick={[Function]}
                              >
                                <Icon
                                  iconName="plus"
                                >
                                  <svg
                                    className="lexicon-icon lexicon-icon-plus"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                                      }
                                    }
                                    data-testid="icon"
                                    focusable="false"
                                    role="presentation"
                                  />
                                </Icon>
                              </a>
                            </Link>
                          </ChildLinkWrapper>
                        </Component>
                      </withRouter()>
                    </span>
                  </span>
                </TooltipProvider>
              </li>
            </ul>
          </div>
        </nav>
        <div
          className="container-fluid-1280"
        >
          <ListView
            emptyMessageText="sla-allows-to-define-and-measure-process-performance"
            emptyTitleText="no-slas-yet"
            fetching={false}
            loading={true}
          >
            <div>
              <LoadingState>
                <div
                  className="border-1 pb-6 pt-6 sheet"
                  data-testid="loadingState"
                >
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </div>
              </LoadingState>
            </div>
          </ListView>
        </div>
      </SLAListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render toast with SLA updated message 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <SLAListCard>
        <nav
          className="management-bar management-bar-light navbar navbar-expand-md"
        >
          <div
            className="container-fluid container-fluid-max-xl"
          >
            <ul
              className="autofit-row navbar-nav"
            >
              <li
                className="autofit-col-expand autofit-float-end nav-item"
              >
                <TooltipProvider>
                  <span
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="workflow-tooltip"
                      data-tooltip-align="bottom"
                      title="new-sla"
                    >
                      <withRouter()
                        className="btn btn-primary nav-btn nav-btn-monospaced"
                        to="/sla/new/undefined"
                      >
                        <Component
                          className="btn btn-primary nav-btn nav-btn-monospaced"
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "match": Object {
                                  "params": Object {
                                    "page": 1,
                                    "search": undefined,
                                    "sort": undefined,
                                  },
                                },
                                "pathname": "/processes/1/10/title%3Aasc",
                                "search": "?backPath=%2F",
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          location={
                            Object {
                              "hash": "",
                              "match": Object {
                                "params": Object {
                                  "page": 1,
                                  "search": undefined,
                                  "sort": undefined,
                                },
                              },
                              "pathname": "/processes/1/10/title%3Aasc",
                              "search": "?backPath=%2F",
                            }
                          }
                          match={
                            Object {
                              "isExact": false,
                              "params": Object {},
                              "path": "/",
                              "url": "/",
                            }
                          }
                          to="/sla/new/undefined"
                        >
                          <ChildLinkWrapper
                            backPath="/"
                            className="btn btn-primary nav-btn nav-btn-monospaced"
                            currentPath="/processes/1/10/title%3Aasc?backPath=%2F"
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "match": Object {
                                      "params": Object {
                                        "page": 1,
                                        "search": undefined,
                                        "sort": undefined,
                                      },
                                    },
                                    "pathname": "/processes/1/10/title%3Aasc",
                                    "search": "?backPath=%2F",
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            to="/sla/new/undefined"
                          >
                            <Link
                              className="btn btn-primary nav-btn nav-btn-monospaced"
                              to={
                                Object {
                                  "pathname": "/sla/new/undefined",
                                  "search": "?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F",
                                }
                              }
                            >
                              <a
                                className="btn btn-primary nav-btn nav-btn-monospaced"
                                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                                onClick={[Function]}
                              >
                                <Icon
                                  iconName="plus"
                                >
                                  <svg
                                    className="lexicon-icon lexicon-icon-plus"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                                      }
                                    }
                                    data-testid="icon"
                                    focusable="false"
                                    role="presentation"
                                  />
                                </Icon>
                              </a>
                            </Link>
                          </ChildLinkWrapper>
                        </Component>
                      </withRouter()>
                    </span>
                  </span>
                </TooltipProvider>
              </li>
            </ul>
          </div>
        </nav>
        <div
          className="container-fluid-1280"
        >
          <ListView
            emptyMessageText="sla-allows-to-define-and-measure-process-performance"
            emptyTitleText="no-slas-yet"
            fetching={false}
            loading={true}
          >
            <div>
              <LoadingState>
                <div
                  className="border-1 pb-6 pt-6 sheet"
                  data-testid="loadingState"
                >
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </div>
              </LoadingState>
            </div>
          </ListView>
        </div>
      </SLAListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test props change 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <SLAListCard>
        <nav
          className="management-bar management-bar-light navbar navbar-expand-md"
        >
          <div
            className="container-fluid container-fluid-max-xl"
          >
            <ul
              className="autofit-row navbar-nav"
            >
              <li
                className="autofit-col-expand autofit-float-end nav-item"
              >
                <TooltipProvider>
                  <span
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="workflow-tooltip"
                      data-tooltip-align="bottom"
                      title="new-sla"
                    >
                      <withRouter()
                        className="btn btn-primary nav-btn nav-btn-monospaced"
                        to="/sla/new/undefined"
                      >
                        <Component
                          className="btn btn-primary nav-btn nav-btn-monospaced"
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "match": Object {
                                  "params": Object {
                                    "page": 1,
                                    "search": undefined,
                                    "sort": undefined,
                                  },
                                },
                                "pathname": "/processes/1/10/title%3Aasc",
                                "search": "?backPath=%2F",
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          location={
                            Object {
                              "hash": "",
                              "match": Object {
                                "params": Object {
                                  "page": 1,
                                  "search": undefined,
                                  "sort": undefined,
                                },
                              },
                              "pathname": "/processes/1/10/title%3Aasc",
                              "search": "?backPath=%2F",
                            }
                          }
                          match={
                            Object {
                              "isExact": false,
                              "params": Object {},
                              "path": "/",
                              "url": "/",
                            }
                          }
                          to="/sla/new/undefined"
                        >
                          <ChildLinkWrapper
                            backPath="/"
                            className="btn btn-primary nav-btn nav-btn-monospaced"
                            currentPath="/processes/1/10/title%3Aasc?backPath=%2F"
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "match": Object {
                                      "params": Object {
                                        "page": 1,
                                        "search": undefined,
                                        "sort": undefined,
                                      },
                                    },
                                    "pathname": "/processes/1/10/title%3Aasc",
                                    "search": "?backPath=%2F",
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "match": Object {
                                    "params": Object {
                                      "page": 1,
                                      "search": undefined,
                                      "sort": undefined,
                                    },
                                  },
                                  "pathname": "/processes/1/10/title%3Aasc",
                                  "search": "?backPath=%2F",
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            to="/sla/new/undefined"
                          >
                            <Link
                              className="btn btn-primary nav-btn nav-btn-monospaced"
                              to={
                                Object {
                                  "pathname": "/sla/new/undefined",
                                  "search": "?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F",
                                }
                              }
                            >
                              <a
                                className="btn btn-primary nav-btn nav-btn-monospaced"
                                href="/sla/new/undefined?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F"
                                onClick={[Function]}
                              >
                                <Icon
                                  iconName="plus"
                                >
                                  <svg
                                    className="lexicon-icon lexicon-icon-plus"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#plus\\" />",
                                      }
                                    }
                                    data-testid="icon"
                                    focusable="false"
                                    role="presentation"
                                  />
                                </Icon>
                              </a>
                            </Link>
                          </ChildLinkWrapper>
                        </Component>
                      </withRouter()>
                    </span>
                  </span>
                </TooltipProvider>
              </li>
            </ul>
          </div>
        </nav>
        <div
          className="container-fluid-1280"
        >
          <ListView
            emptyMessageText="sla-allows-to-define-and-measure-process-performance"
            emptyTitleText="no-slas-yet"
            fetching={false}
            loading={true}
          >
            <div>
              <LoadingState>
                <div
                  className="border-1 pb-6 pt-6 sheet"
                  data-testid="loadingState"
                >
                  <span
                    aria-hidden="true"
                    className="loading-animation"
                  />
                </div>
              </LoadingState>
            </div>
          </ListView>
        </div>
      </SLAListCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;
